tg-4859 Api Key

--- a/back-end/app/pom.xml
+++ b/back-end/app/pom.xml
@@ -49,6 +49,12 @@
         </dependency>
 
         <dependency>
+            <groupId>ar.lamansys.sgh</groupId>
+            <artifactId>hospital-public-api</artifactId>
+            <version>${revision}</version>
+        </dependency>
+
+        <dependency>
             <groupId>ar.lamansys</groupId>
             <artifactId>sgx-auth</artifactId>
             <version>0.0.1-SNAPSHOT</version>
