--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_24.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_24.yml
@@ -251,3 +251,14 @@ databaseChangeLog:
                     INSERT INTO self_perceived_gender (id,description,orden) VALUES (9,'Género fluido',9);
                     INSERT INTO self_perceived_gender (id,description,orden) VALUES (10,'Ninguna de las anteriores',10);
                     
+    - changeSet:
+        id: person_extended-addColumn-other_gender_self_determination
+        comment: add new column other_gender_self_determination to person_extended table
+        author: lbergottini
+        changes:
+        - addColumn:
+            tableName: person_extended
+            columns:
+            - column:
+                name: other_gender_self_determination
+                type: varchar(40)
