--- a/back-end/app/src/main/resources/application-prod.properties
+++ b/back-end/app/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # Tiempo en minutos
-token.expiration=${TOKEN_EXPIRATION:20}
+token.expiration=${TOKEN_EXPIRATION:20m}
 
 # ===============================
 # Modules
