--- a/back-end/app/src/main/resources/application.properties
+++ b/back-end/app/src/main/resources/application.properties
@@ -22,9 +22,9 @@ token.secret=${TOKEN_SECRET}
 token.header=Authorization
 
 # Tiempo en minutos
-token.expiration=${TOKEN_EXPIRATION:30}
-refreshToken.expiration=${REFRESHTOKEN_EXPIRATION:2880}
-validationToken.expiration=${VALIDTOKEN_EXPIRATION:1440}
+token.expiration=${TOKEN_EXPIRATION:30m}
+refreshToken.expiration=${REFRESHTOKEN_EXPIRATION:2880m}
+validationToken.expiration=${VALIDTOKEN_EXPIRATION:1440m}
 
 # =============== EMAIL =================
 spring.mail.host=${SMTP_HOST:smtp.gmail.com}
