--- a/front-end/apps/package.json
+++ b/front-end/apps/package.json
@@ -8,6 +8,7 @@
     "build:prod": "ng build hospital --prod --base-href /",
     "build:odontology": "ng build odontology",
     "test": "ng test",
+    "ci:test": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "lint:debug": "DEBUG=typescript-eslint:* ng lint",
     "lint:fix": "ng lint --fix",
@@ -16,25 +17,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.5",
-    "@angular/cdk": "^11.2.4",
-    "@angular/common": "~11.2.5",
-    "@angular/compiler": "~11.2.5",
-    "@angular/core": "~11.2.5",
+    "@angular/animations": "~11.2.14",
+    "@angular/cdk": "^11.2.13",
+    "@angular/common": "~11.2.14",
+    "@angular/compiler": "~11.2.14",
+    "@angular/core": "~11.2.14",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~11.2.5",
-    "@angular/material": "^11.2.4",
-    "@angular/material-moment-adapter": "^11.2.4",
-    "@angular/platform-browser": "~11.2.5",
-    "@angular/platform-browser-dynamic": "~11.2.5",
-    "@angular/router": "~11.2.5",
-    "@angular/service-worker": "~11.2.5",
+    "@angular/forms": "~11.2.14",
+    "@angular/material": "^11.2.13",
+    "@angular/material-moment-adapter": "^11.2.13",
+    "@angular/platform-browser": "~11.2.14",
+    "@angular/platform-browser-dynamic": "~11.2.14",
+    "@angular/router": "~11.2.14",
+    "@angular/service-worker": "~11.2.14",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
-    "@types/file-saver": "^2.0.1",
     "angular-calendar": "^0.28.16",
-    "angular-file-saver": "^1.1.3",
     "date-fns": "^2.14.0",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "moment": "^2.24.0",
     "ng-recaptcha": "^6.0.0",
@@ -45,15 +45,16 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.4",
+    "@angular-devkit/build-angular": "^0.1102.14",
     "@angular-eslint/builder": "4.3.0",
     "@angular-eslint/eslint-plugin": "4.3.0",
     "@angular-eslint/eslint-plugin-template": "4.3.0",
     "@angular-eslint/schematics": "4.3.0",
     "@angular-eslint/template-parser": "4.3.0",
-    "@angular/cli": "~11.2.4",
-    "@angular/compiler-cli": "~11.2.5",
-    "@angular/language-service": "~11.2.5",
+    "@angular/cli": "~11.2.14",
+    "@angular/compiler-cli": "~11.2.14",
+    "@angular/language-service": "~11.2.14",
+    "@types/file-saver": "^2.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
