--- a/front-end/apps/tsconfig.json
+++ b/front-end/apps/tsconfig.json
@@ -1,21 +1,21 @@
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
 	"compileOnSave": false,
 	"compilerOptions": {
 		"baseUrl": "./",
 		"outDir": "./dist/out-tsc",
+		"forceConsistentCasingInFileNames": true,
+		"noFallthroughCasesInSwitch": true,
 		"sourceMap": true,
 		"declaration": false,
 		"downlevelIteration": true,
 		"experimentalDecorators": true,
 		"moduleResolution": "node",
-		"importHelpers": true,
-		"target": "es2015",
-		"module": "esnext",
-		"lib": [
-			"es2018",
-			"dom"
-		],
 		"paths": {
+			"odontology": [
+				"dist/odontology/odontology",
+				"dist/odontology"
+			],
 			"@environments/*": [
 				"projects/hospital/src/environments/*"
 			],
@@ -48,15 +48,20 @@
 			],
 			"@extensions/*": [
 				"projects/hospital/src/app/modules/extensions/*"
-			],
-			"odontology": [
-				"dist/odontology/odontology",
-				"dist/odontology"
 			]
-		}
+		},
+		"importHelpers": true,
+		"target": "es2015",
+		"module": "esnext",
+		"lib": [
+			"es2018",
+			"dom"
+		]
 	},
 	"angularCompilerOptions": {
+		"enableI18nLegacyMessageIdFormat": false,
+		"strictInjectionParameters": true,
+		"strictInputAccessModifiers": true,
 		"fullTemplateTypeCheck": true,
-		"strictInjectionParameters": true
 	}
 }
