--- a/front-end/apps/package.json
+++ b/front-end/apps/package.json
@@ -5,78 +5,53 @@
     "ng": "ng",
     "start": "ng serve --proxy-config projects/hospital/src/proxy.conf.json",
     "build": "ng build",
-    "build:prod": "ng build hospital --prod --base-href /",
+    "build:prod": "ng build hospital --base-href /",
     "build:odontology": "ng build odontology",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "ci:test": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
-    "lint": "ng lint",
-    "lint:debug": "DEBUG=typescript-eslint:* ng lint",
-    "lint:fix": "ng lint --fix",
-    "e2e": "ng e2e",
-    "postinstall": "ngcc"
+    "ci:test": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.14",
-    "@angular/cdk": "^11.2.13",
-    "@angular/common": "~11.2.14",
-    "@angular/compiler": "~11.2.14",
-    "@angular/core": "~11.2.14",
-    "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~11.2.14",
-    "@angular/material": "^11.2.13",
-    "@angular/material-moment-adapter": "^11.2.13",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
-    "@angular/router": "~11.2.14",
-    "@angular/service-worker": "~11.2.14",
+    "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.2.9",
+    "@angular/common": "~12.2.0",
+    "@angular/compiler": "~12.2.0",
+    "@angular/core": "~12.2.0",
+    "@angular/flex-layout": "^12.0.0-beta.35",
+    "@angular/forms": "~12.2.0",
+    "@angular/material": "^12.2.9",
+    "@angular/material-moment-adapter": "^12.2.9",
+    "@angular/platform-browser": "~12.2.0",
+    "@angular/platform-browser-dynamic": "~12.2.0",
+    "@angular/router": "~12.2.0",
+    "@angular/service-worker": "~12.2.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
-    "angular-calendar": "^0.28.16",
-    "date-fns": "^2.14.0",
+    "angular-calendar": "^0.28.28",
+    "date-fns": "^2.25.0",
     "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
-    "moment": "^2.24.0",
-    "ng-recaptcha": "^6.0.0",
-    "ngx-moment": "^5.0.0",
+    "moment": "^2.29.1",
+    "ng-recaptcha": "^8.0.1",
     "ngx-translate-multi-http-loader": "^3.0.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.14",
-    "@angular-eslint/builder": "4.3.0",
-    "@angular-eslint/eslint-plugin": "4.3.0",
-    "@angular-eslint/eslint-plugin-template": "4.3.0",
-    "@angular-eslint/schematics": "4.3.0",
-    "@angular-eslint/template-parser": "4.3.0",
-    "@angular/cli": "~11.2.14",
-    "@angular/compiler-cli": "~11.2.14",
-    "@angular/language-service": "~11.2.14",
-    "@types/file-saver": "^2.0.3",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "~12.2.10",
+    "@angular/cli": "~12.2.10",
+    "@angular/compiler-cli": "~12.2.0",
+    "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-jsdoc": "latest",
-    "eslint-plugin-prefer-arrow": "latest",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.2.0",
+    "jasmine-core": "~3.8.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.0.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.1.5"
-  },
-  "resolutions": {
-    "webpack": "^5.0.0"
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "ng-packagr": "^12.1.1",
+    "typescript": "~4.3.5"
   }
 }
