--- a/front-end/apps/tsconfig.json
+++ b/front-end/apps/tsconfig.json
@@ -5,6 +5,8 @@
 		"baseUrl": "./",
 		"outDir": "./dist/out-tsc",
 		"forceConsistentCasingInFileNames": true,
+
+
 		"noFallthroughCasesInSwitch": true,
 		"sourceMap": true,
 		"declaration": false,
@@ -51,8 +53,8 @@
 			]
 		},
 		"importHelpers": true,
-		"target": "es2015",
-		"module": "esnext",
+		"target": "es2017",
+		"module": "es2020",
 		"lib": [
 			"es2018",
 			"dom"
@@ -62,6 +64,6 @@
 		"enableI18nLegacyMessageIdFormat": false,
 		"strictInjectionParameters": true,
 		"strictInputAccessModifiers": true,
-		"fullTemplateTypeCheck": true,
+		"fullTemplateTypeCheck": true
 	}
 }
